fixed abous us page overlapping and flickering background color

--- a/Styling/about.css
+++ b/Styling/about.css
@@ -8,6 +8,7 @@
     transform: translate(-50%, -50%);
     align-items: center;
     border-radius: 2vh;
+    z-index: 2
   }
   #aboutDiv h1{
     color: white;
